[tool.poetry]
name = "storage-forage"
version = "0.0.0"
description = ""
authors = ["Madhup Sukoon <29144316+madhup@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
gradio = "^4.42.0"
plotly = "^5.24.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pandas-stubs = "^2.2.2.240807"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "gradio"
]
ignore_missing_imports = true